# HydrusMCPServer

./: .gitignore  Dockerfile  README.md  character_prompt (2).md  character_prompt.md  functions.py  hydrus_clients.json.template  hydrus_server.py  mcp_lm.json  pyproject.toml  registry.yaml  requirements.txt
hydrus_mcp/: __init__.py  functions.py  server.py
hydrus_mcp/tools/: __init__.py  sense_tools.py  tab_tools.py
