[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydrus-mcp"
version = "1.0.1"
description = "MCP Server for Hydrus - Allowing your LLM to interact with your hydrus client to interact with your media"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "https://github.com/TheElo", email = "elochai2@googlemail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "hydrus_api>=1.0.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
]

[project.scripts]
hydrus-mcp = "hydrus_mcp.server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hydrus_mcp"]
